# outreach-ai

./: .gitignore  .outreachai.example.yml  CONTRIBUTING.md  README.md  pyproject.toml
examples/: prospects.csv
outreach/: __init__.py  batch.py  cli.py  config.py  tone.py
outreach/channels/: email.py  linkedin.py  twitter.py
outreach/llm/: base.py  claude.py  ollama_llm.py  openai_llm.py  router.py
outreach/personalization/: linkedin_scraper.py
outreach/prompts/: email_sequence.yml  linkedin_dm.yml  personalization.yml  twitter_dm.yml
tests/: test_batch.py  test_cli.py  test_email_channel.py  test_llm_router.py
tones/: casual.yml  challenger.yml  founder.yml  professional.yml
